# solidity-BN256G2

./: pyproject.toml
.github/workflows/: python-app.yml
contracts/: BN256G2.sol
tests/: test_BN256G2.py
